creating a gradle build

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ bin/
 arx.exe
 obj/
 src\ARX.layout
+gradlew
+*.layout
+gradle/wrapper/gradle-wrapper.jar
+gradle/wrapper/gradle-wrapper.properties
+Images/color pallet.pal
+src/ARX.layout
