package script update
Missing arx.ini file

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ gradle/wrapper/gradle-wrapper.jar
 gradle/wrapper/gradle-wrapper.properties
 Images/color pallet.pal
 src/ARX.layout
+src/ARX.layout
