--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ gradle/wrapper/gradle-wrapper.properties
 Images/color pallet.pal
 src/ARX.layout
 src/ARX.layout
+/Librarys
+/x64/Debug
+/Debug
+/.vs
+/src/.vs
+/src/Debug
+/src/x64/Debug
