--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ src/ARX.layout
 /src/x64/Debug
 /src/Release
 release/.gitattributes
+release/AR_X_0.83.2.zip
+release/AR_X_0.83.2.zip
+release/AR_X_0.83.zip
