--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ release/.gitattributes
 release/AR_X_0.83.2.zip
 release/AR_X_0.83.2.zip
 release/AR_X_0.83.zip
+release/AR_X_0.83.2.zip
+release/AR_X_0.83.3.zip
