--- a/src/ARXX.vcxproj
+++ b/src/ARXX.vcxproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
+    <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -53,9 +53,11 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="CommonProperties.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="CommonProperties.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -66,7 +68,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>F:\Source\ARX2023\Librarys\SFML-2.6.0\include;F:\Source\ARX2023\Librarys;F:\Source\ARX2023\Librarys\glfw\glfw-3.3.8.bin.WIN64\lib-vc2022;$(IncludePath)</IncludePath>
+    <IncludePath>F:\Source\ARX2023\Librarys\SFML-2.6.0\include;F:\Source\ARX2023\Librarys\include;F:\Source\ARX2023\Librarys;F:\Source\ARX2023\Librarys\glfw\glfw-3.3.8.bin.WIN64\lib-vc2022;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -74,7 +76,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>F:\Source\ARX2023\Librarys\SFML-2.6.0\include;F:\Source\ARX2023\Librarys;$(IncludePath)</IncludePath>
+    <IncludePath>F:\Source\ARX2023\Librarys\SFML-2.6.0\include;F:\Source\ARX2023\Librarys\include;F:\Source\ARX2023\Librarys;F:\Source\ARX2023\Librarys\glfw\glfw-3.3.8.bin.WIN64\lib-vc2022;$(IncludePath)</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -85,12 +88,16 @@
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <AdditionalIncludeDirectories>..\Librarys\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>F:\Source\ARX2023\Librarys\glfw;F:\Source\ARX2023\Librarys\include;F:\Source\ARX2023\Librarys\SFML;F:\Source\ARX2023\Librarys\glew32\glew-2.1.0\include\GL;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glu32.lib;sfml-system-d.lib;sfml-audio-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;glfw3dll.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\Librarys\glfw;..\Librarys\include;..\Librarys\glew32\glew-2.1.0\include\GL;..\Librarys\include\openssl;..\Librarys\SFML-2.6.0\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3dll.lib;glfw3.lib;libssl.lib;libcrypto.lib;sfml-system-d.lib;
+sfml-window-d.lib
+;sfml-graphics-d.lib;sfml-audio-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -109,6 +116,8 @@
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>..\Librarys\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -117,9 +126,15 @@
       </EnableCOMDATFolding>
       <OptimizeReferences>
       </OptimizeReferences>
-      <AdditionalLibraryDirectories>F:\Source\ARX2023\Librarys\include;F:\Source\ARX2023\Librarys\SFML;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glu32.lib;sfml-system-d.lib;sfml-audio-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\Librarys\glfw;..\Librarys\include;..\Librarys\glew32\glew-2.1.0\include\GL;..\Librarys\include\openssl;..\Librarys\SFML-2.6.0\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3dll.lib;glfw3.lib;libssl.lib;libcrypto.lib;sfml-system.lib;
+sfml-window.lib
+;sfml-graphics.lib;sfml-audio.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>
+      </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -134,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Librarys\include\base64\base64.cpp" />
     <ClCompile Include="3Dview.cpp" />
     <ClCompile Include="3dviewnew.cpp" />
     <ClCompile Include="actor.cpp" />
@@ -169,12 +185,14 @@
     <ClCompile Include="module.cpp" />
     <ClCompile Include="oracle.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="prison.cpp" />
     <ClCompile Include="rathskeller.cpp" />
     <ClCompile Include="retreat.cpp" />
     <ClCompile Include="saveGame.cpp" />
     <ClCompile Include="screen.cpp" />
     <ClCompile Include="shop.cpp" />
     <ClCompile Include="smithy.cpp" />
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="spells.cpp" />
     <ClCompile Include="staircase.cpp" />
     <ClCompile Include="tavern.cpp" />
@@ -209,7 +227,7 @@
     <ClInclude Include="globals.h" />
     <ClInclude Include="goblins.h" />
     <ClInclude Include="guild.h" />
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="constants.h" />
     <ClInclude Include="healer.h" />
     <ClInclude Include="inn.h" />
     <ClInclude Include="input.h" />
@@ -222,7 +240,9 @@
     <ClInclude Include="module.h" />
     <ClInclude Include="oracle.h" />
     <ClInclude Include="player.h" />
+    <ClInclude Include="prison.h" />
     <ClInclude Include="rathskeller.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="retreat.h" />
     <ClInclude Include="saveGame.h" />
     <ClInclude Include="screen.h" />
