--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ release/AR_X_0.83.zip
 release/AR_X_0.83.2.zip
 release/AR_X_0.83.3.zip
 /src/data/map/WildernessXLSCells.xlsm
+/src/ARXX/Release/ARXX.tlog
