--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ release/AR_X_0.83.3.zip
 /src/data/map/WildernessXLSCells.xlsm
 /src/ARXX/Release/ARXX.tlog
 /src/data/map/~$WildernessXLSCells.xlsm
+/src/ARXX/Release/3Dview.obj
