--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ release/AR_X_0.83.3.zip
 /src/ARXX/Release/ARXX.tlog
 /src/data/map/~$WildernessXLSCells.xlsm
 /src/ARXX/Release/3Dview.obj
+/Release
